crates/cash-parser/src/parser/tests/snapshots/cash_parser__parser__tests__assignments__parse_assignment_array_mixed.snap
---
source: cash-parser/src/parser/tests/assignments.rs
expression: "ParseResult { input, result: &result }"
---
ParseResult(
  input: "arr=(a [5]=b c)",
  result: Program(
    complete_commands: [
      CompoundList([
        CompoundListItem(AndOrList(
          first: Pipeline(
            seq: [
              Simple(SimpleCommand(
                prefix: Some(CommandPrefix([
                  AssignmentWord(Assignment(
                    name: VariableName("arr"),
                    value: Array([
                      (None, Word(
                        value: "a",
                        loc: "[location]",
                      )),
                      (Some(Word(
                        value: "5",
                        loc: "[location]",
                      )), Word(
                        value: "b",
                        loc: "[location]",
                      )),
                      (None, Word(
                        value: "c",
                        loc: "[location]",
                      )),
                    ]),
                    loc: "[location]",
                  ), Word(
                    value: "arr=(a [5]=b c)",
                    loc: "[location]",
                  )),
                ])),
              )),
            ],
          ),
        ), Sequence),
      ]),
    ],
  ),
)
